--- a/airflow/celeryexecutor/docker-compose.yaml
+++ b/airflow/celeryexecutor/docker-compose.yaml
@@ -1,8 +1,7 @@
 
 x-airflow-common:
   &airflow-common
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:3.0.6}
-  # build: .
+  build: .
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
